almost done with small screen just need to fix spacing between divs

--- a/assets/style.css
+++ b/assets/style.css
@@ -123,6 +123,7 @@ img {
 
 .skillList {
   margin-top: 5.5rem;
+  /* margin-bottom: 5.5rem; */
 }
 
 /* Media Query for responsive design */
@@ -131,18 +132,28 @@ img {
     flex-direction: column;
     width: 100%;
     height: auto;
-    margin-top: 3.5rem;
-    /* margin: 0px 45px; */
-  }
-
-  h3 {
-    margin-bottom: 1px;
+    margin: 3.5rem 1.5rem;
   }
 
   .info {
     position: static;
     width: 100%;
-    margin-bottom: 20px;
+    margin-bottom: 0;
+  }
+
+  .body_info {
+    width: 100%;
+    margin: 0;
+    margin-top: 3.5rem;
+  }
+
+  .skillList {
+    margin: 0;
+    margin-top: 5.5rem;
+  }
+
+  .personalProjects {
+    margin-top: 5.5rem;
   }
 
   .logos {
@@ -150,9 +161,8 @@ img {
     margin-top: 15px;
   }
 
-  .body_info {
-    width: 100%;
-    margin: 0;
+  h3 {
+    margin-bottom: 1px;
   }
 
   .tableContents {
@@ -166,6 +176,11 @@ img {
     font-size: 14px;
     margin-bottom: 2rem;
     color: #ffffff;
+    /* testing */
+    background-color: #4d4d4d;
+    width: 100%;
+    padding: 10px;
+    box-sizing: border-box;
   }
 
   .bf {
